[project]
name = "rerank"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=3.1",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "llm-factory>=0.0.3.1",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "pymilvus>=2.6.12",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.0",
]
